add pose constraints

--- a/config/poses.yaml
+++ b/config/poses.yaml
@@ -1,3 +1,36 @@
-open: []
-half_close: []
-close: []
+open:
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+  - 0.0
+half_close:
+  - 0.68
+  - 0.29
+  - 0.54
+  - 0.8
+  - 0.715
+  - 0.8
+  - 0.715
+  - 0.8
+  - 0.715
+  - 0.8
+  - 0.715
+close:
+  - 1.36
+  - 0.58
+  - 1.08
+  - 1.6
+  - 1.43
+  - 1.6
+  - 1.43
+  - 1.6
+  - 1.43
+  - 1.6
+  - 1.43
